# DeepSight

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  ruff.toml
docs/: index.md
examples/: train_gahoi.py
scripts/: train_gahoi.py
src/deepsight/: __init__.py  __main__.py  _engine.py  _misc.py  _phase.py  _state.py  _tensor.py
src/deepsight/_padded/: __init__.py  _tensor.py
src/deepsight/callbacks/: _callback.py
src/deepsight/core/: __init__.py  _dataset.py  _evaluator.py  _model.py
src/deepsight/data/: __init__.py  _batch.py  _dataloader.py  _dataset.py  _samplers.py
src/deepsight/data/object_detection/: __init__.py  _structures.py
src/deepsight/layers/: __init__.py  _activations.py  _dropout.py  _embedding.py  _mlp.py  _norm.py  _patchify.py
src/deepsight/layers/attention/: _mask.py  _mechanism.py  _mha.py  _qkv.py
src/deepsight/layers/vision/: __init__.py  _embeddings.py  _vit.py
src/deepsight/loggers/: _progress_bar.py  _text.py  _wandb.py
src/deepsight/metrics/: __init__.py  _evaluator.py
src/deepsight/models/: __init__.py  _criterion.py  _model.py
src/deepsight/models/detr/: __init__.py  _config.py  _decoder.py  _encoder.py  _model.py  _output.py
src/deepsight/models/gahoi/: __init__.py  _args.py  _config.py  _criterion.py  _decoder.py  _encoder.py  _model.py  _structures.py  _utils.py
src/deepsight/models/pvic/: __init__.py  _criterion.py  _encodings.py  _fusion.py  _model.py  _transformer.py
src/deepsight/models/resnet/: __init__.py  _blocks.py  _config.py  _encoder.py
src/deepsight/models/tahoi/: __init__.py  _criterion.py  _decoder.py  _encoder.py  _model.py  _structures.py
src/deepsight/models/vit/: __init__.py  _backbone.py  _config.py  _encoder.py  _encoder2.py
src/deepsight/modules/: __init__.py  _activations.py  _backbone.py  _embedding.py  _misc.py  _mlp.py  _module.py  _norm.py  _patchify.py  _tmp.py
src/deepsight/modules/attention/: __init__.py  _mask.py  _mechanism.py  _mha.py  _qkv.py
src/deepsight/nn/: _misc.py
src/deepsight/nn/backbones/: __init__.py  _vit.py
src/deepsight/nn/models/: __init__.py  _criterion.py  _model.py
src/deepsight/ops/geometric/: __init__.py  _coalesce.py  _loop.py  _reduce.py  _scatter.py
src/deepsight/ops/vision/: __init__.py  _roi_align.py
src/deepsight/schedulers/: __init__.py  _base.py  _lambda.py  _reciprocal.py  _step.py
src/deepsight/structures/: __init__.py  _batch.py  _batched_bboxes.py  _batched_graphs.py  _batched_images.py  _batched_sequences.py  _batches_sequences.py  _bboxes.py  _ccc.py  _graph.py  _image.py  _network.py
src/deepsight/structures/_image/: __init__.py  _enums.py  _image.py  _utils.py
src/deepsight/structures/geometric/: __init__.py  _ccc.py  _common.py  _graph.py
src/deepsight/structures/vision/: __init__.py  _batched_bboxes.py  (+4 more)
src/deepsight/tasks/: __init__.py  _dataset.py  _evaluator.py  _split.py
src/deepsight/time/: __init__.py  _instant.py  _timestamp.py
src/deepsight/training/: __init__.py  _batch.py  _criterion.py  _dataloader.py  _engine.py  _misc.py  _phase.py  _sampler.py  _state.py  _time.py  _timestamp.py
src/deepsight/transforms/: __init__.py  _base.py  _color.py  _container.py  _geometry.py  _misc.py
src/deepsight/typing/: __init__.py  _decorators.py  _protocols.py  _types.py
src/deepsight/utils/: __init__.py  _enums.py  _logging.py  _misc.py  _reproducibility.py  _torch.py  scatter.py
(+92 files in other folders)
