[project]
name = "deepsight"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Francesco Gentile", email = "francesco.gentile@studenti.unitn.it"},
]
dependencies = [
    "torch>=2.2",
    "numpy>=1.23",
    "coolname>=2.2",
    "Pillow>=10.0",
    "wandb>=0.16",
    "tqdm>=4.66",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
plugins = [
    "sync-pre-commit-lock"
]

[tool.pdm.dev-dependencies]
integration = [
    "pre-commit>=3.6.2",
    "ruff>=0.3",
    "pyright>=1.1.355",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-material>=9.4.10",
]
